# BrainKaraoke

./: LICENSE  README.md  preprocess.sh  requirements.txt  show_details.sh  test_performance.sh  train.sh  waveglow.sh
src/: MelFilterBank.py  audio_processing.py  dataset.py  eeg_main.py  main.py  models.py  pipeline.py  stft.py  train.sh
src/config/: config.toml
src/preprocess/: deta_details.py  filter.py  preprocess.py  visualize.py
src/test_perf/: test.py
src/tests/: README.md  pyproject.toml  test_dataset.py  test_main.py  test_models.py  test_pipeline.py
